Fixed spacing in workshop header.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,11 @@ footer p{clear:left;margin-bottom:0}
 	margin-top: 20px;
 }
 
-.workshop-header h1 {
+#workshop-header h1 {
 	margin-bottom: 0px;
 	padding-bottom: 0px;
+}
+
+#workshop-header {
+	margin-bottom: 20px;
 }
